Modified ma.css so that loadmask spinner spins on iOS 9 devices Ma.util.PullRefresh updated to fix issue on iOS 9 (uses fetchLatest method now instead)

--- a/ma.css
+++ b/ma.css
@@ -13,6 +13,9 @@ html, body {
 	background-color: #777776 !important;
 }
 
+/* FIX FOR BROKEN SPINNER IN LOAD MASK IN IOS 9 */
+@keyframes x-loading-spinner-rotate{0%{transform:rotate(0deg)}8.32%{transform:rotate(0deg)}8.33%{transform:rotate(30deg)}16.65%{transform:rotate(30deg)}16.66%{transform:rotate(60deg)}24.99%{transform:rotate(60deg)}25%{transform:rotate(90deg)}33.32%{transform:rotate(90deg)}33.33%{transform:rotate(120deg)}41.65%{transform:rotate(120deg)}41.66%{transform:rotate(150deg)}49.99%{transform:rotate(150deg)}50%{transform:rotate(180deg)}58.32%{transform:rotate(180deg)}58.33%{transform:rotate(210deg)}66.65%{transform:rotate(210deg)}66.66%{transform:rotate(240deg)}74.99%{transform:rotate(240deg)}75%{transform:rotate(270deg)}83.32%{transform:rotate(270deg)}83.33%{transform:rotate(300deg)}91.65%{transform:rotate(300deg)}91.66%{transform:rotate(330deg)}100%{transform:rotate(330deg)}}
+
 
 /* TOOLBAR (TOP) */
 .x-toolbar.x-docked-top {
